Fix not being able to edit text inputs on mobile
"Nearly all errors in programming are because the programmer is stupid"
- This post was made by the I am an idiot gang.

--- a/w3.css
+++ b/w3.css
@@ -23,7 +23,7 @@ legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}t
 [type=search]::-webkit-search-decoration{-webkit-appearance:none}
 ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
 /* End extract */
-*{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
+*:not(input){-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
 select{cursor:pointer}
 .outline-red{outline-color:#f44336}
 .outline-blue{outline-color:#2196F3}
